# Miniaudio-CS

./: .gitattributes  .gitignore  .gitmodules  Directory.Build.props  LICENSE  Miniaudio-CS.sln  Miniaudio.sln  README.md
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
GenerateBindings/: CMakeLists.txt  generate.gen  miniaudio-native.c
Miniaudio-CS/: Miniaudio-CS.csproj  Miniaudio.cs  NativeTypeNameAttribute.cs
buildTransitive/: Miniaudio.CSharp.targets
eng/: build-native.ps1  build-native.sh  generate-bindings.ps1  generate-bindings.sh  generate.rsp  generated-header.txt  stage-managed.ps1  update-miniaudio.ps1  validate-package.ps1
eng/cmake/: linux-armhf.cmake
native/: CMakeLists.txt
native/osx-arm64/: libminiaudio.dylib
native/osx-x64/: libminiaudio.dylib
src/Miniaudio/: Miniaudio.Constants.cs  Miniaudio.csproj  MiniaudioInfo.cs
tests/Miniaudio.PackageSmoke/: Miniaudio.PackageSmoke.csproj  Program.cs
tests/Miniaudio.SmokeTests/: Miniaudio.SmokeTests.csproj  Program.cs
